Updates from merging in latest code from main.